--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,500" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="canonical" href="https://adamturner.me/"/>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+  <script src="assets/jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
