--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="line"></div>
       <div class="line"></div>
     </div>
-    <div class="nav">
+    <div class="nav" id="nav">
       <a id="name" href="">ADAM TURNER</a>
       <a href="">ABOUT</a>
       <a href="">EXPERIENCE</a>
@@ -35,27 +35,28 @@
       var x = window.matchMedia("(max-width: 800px)");
       $(".menu-button").click(function() {
         if (menu === "close") {
-          	$(this).next(".nav").css("transform", "translate(0, 0)");
-          	$(this).next(".nav").css("transition", "all 0.4s ease-in-out");
-            $(this).children(".line:first").css("transform", "rotate(46deg) translate(5px, 5px)");
-            $(this).children(".line:last").css("transform", "rotate(-45deg) translate(3px, -4px)");
+          	$(this).next(".nav").addClass("animate");
+          	$(this).next(".nav").removeClass("hide");
+            $(this).children(".line:first").removeClass("reset");
+            $(this).children(".line:last").removeClass("reset");
+            $(this).children(".line:first").addClass("animate-top");
+            $(this).children(".line:last").addClass("animate-bottom");
          	  menu = "open";
         } else {
-          	$(this).next(".nav").css("transform", "translate(0, -100%)");
-            $(this).children(".line:first").css("transform", "rotate(0deg) translate(0, 0)");
-            $(this).children(".line:last").css("transform", "rotate(0deg) translate(0, 0)");
+          	$(this).next(".nav").removeClass("animate");
+            $(this).children(".line:first").removeClass("animate-top");
+            $(this).children(".line:last").removeClass("animate-bottom");
           	menu = "close";
         }
       });
       function navType(x) {
         if (x.matches) {
-          document.querySelector('.nav').style.transform = "translate(0, -100%)";
+          document.getElementById('nav').classList.remove("animate");
           menu = "close";
         } else {
-          document.querySelector('.nav').style.transform = "translate(0, 0)";
-          document.querySelector('.nav').style.transition = "none";
-          document.getElementsByClassName('line')[0].style.transform = "rotate(0deg) translate(0, 0)";
-          document.getElementsByClassName('line')[1].style.transform = "rotate(0deg) translate(0, 0)";
+          document.getElementById('nav').classList.add("hide");
+          document.getElementsByClassName('line')[0].classList.add("reset");
+          document.getElementsByClassName('line')[1].classList.add("reset");
           menu = "close";
         };
       }
