--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Adam Turner</title>
   <link rel="stylesheet" type="text/css" href="style.css"/>
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,500" rel="stylesheet">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="canonical" href="https://adamturner.me/"/>
   <script src="assets/jquery-3.3.1.min.js"></script>
+  <script src="main.js"></script>
 </head>
 
 <body>
@@ -17,51 +18,16 @@
       <div class="line"></div>
     </div>
     <div class="nav" id="nav">
-      <a id="name" href="">ADAM TURNER</a>
-      <a href="">ABOUT</a>
-      <a href="">EXPERIENCE</a>
-      <a href="">PROJECTS</a>
-      <a href="">PHOTOGRAPHY</a>
-      <a href="">CONTACT</a>
+      <a id="name" href="index.html">ADAM TURNER</a>
+      <a href="about.html">ABOUT</a>
+      <a href="experience.html">EXPERIENCE</a>
+      <a href="projects.html">PROJECTS</a>
+      <a href="photography.html">PHOTOGRAPHY</a>
+      <a href="contact.html">CONTACT</a>
     </div>
-    <div class="content">
+    <div class="home-content">
       <h1>ADAM TURNER</h1>
       <h2>Currently studying Computing and Digital Technologies<br>in the Bachelor of Design at The University of Melbourne.</h2>
     </div>
   </div>
-  <script>
-    $(document).ready(function() {
-      var menu = "close";
-      var x = window.matchMedia("(max-width: 800px)");
-      $(".menu-button").click(function() {
-        if (menu === "close") {
-          	$(this).next(".nav").addClass("animate");
-          	$(this).next(".nav").removeClass("hide");
-            $(this).children(".line:first").removeClass("reset");
-            $(this).children(".line:last").removeClass("reset");
-            $(this).children(".line:first").addClass("animate-top");
-            $(this).children(".line:last").addClass("animate-bottom");
-         	  menu = "open";
-        } else {
-          	$(this).next(".nav").removeClass("animate");
-            $(this).children(".line:first").removeClass("animate-top");
-            $(this).children(".line:last").removeClass("animate-bottom");
-          	menu = "close";
-        }
-      });
-      function navType(x) {
-        if (x.matches) {
-          document.getElementById('nav').classList.remove("animate");
-          menu = "close";
-        } else {
-          document.getElementById('nav').classList.add("hide");
-          document.getElementsByClassName('line')[0].classList.add("reset");
-          document.getElementsByClassName('line')[1].classList.add("reset");
-          menu = "close";
-        };
-      }
-      navType(x)
-      x.addListener(navType)
-    });
-  </script>
 </body>
