added photos, project links and description

--- a/photography.html
+++ b/photography.html
@@ -36,6 +36,9 @@
       </div>
       <div class="pg-gallery">
         <a href="" class="thumbs"><img src="https://lh3.googleusercontent.com/usukHgi_Q04cdmQY-vu30ca3FwXYXRRE9_cs5I_0PQ36n2mmVk-E3vT2CWy88QMD3cP4V7rRagN81qaFzbDXWuMP4eqsP6oGcBqE0WkZvPCLhsvsz6odx8mCzja75sZeRqiMQckaxw=w800"/></a>
+        <a href="" class="thumbs"><img src="https://lh3.googleusercontent.com/wvYjxsxLfgnr8EV1dv6I6YgXY_J70ABEN2PTYgDbwd9fIDV9uh72yw8sTML6BzHQEBXd0_W5Tp348fwkVQC9E1m2nlK2fxy_p7q2Nm7rLXinMoSJBjjvazAyazSuuTnMB9rxulMIxw=w800"/></a>
+        <a href="" class="thumbs"><img src="https://lh3.googleusercontent.com/wyugYmY5fo_TpbNjjJw911zb5xhhkxBiFY4Y-bcoYYJ0-DHsL0dJkIMWe3RWZcJU94ys5ONM1LzlGaFdfaAMW6e5SHKE8e7fwQ4C-ljP20G-91lT7dqOrLur6u9i5kIicaqldszbSg=w800"/></a>
+        <a href="" class="thumbs"><img src="https://lh3.googleusercontent.com/g5WOEnarM3Ub87niNgu7yy-0Lf2AjN97Kuhy2T4OL0kDRjhmDGrrQblL7CWiu4BSLdgJhEvfMxNawuBTkn91TF9pU9NtN1KbzKuH2Z3TUPyJ6FgjB_ZWETUNagOjRT4OUbZJAWiQKg=w800"/></a>
         <a href="" class="thumbs"><img src="https://lh3.googleusercontent.com/g1ubZm3pOxTGAeQfGW7BbZYOTJ7K7LYb8aGBMF2LN69G-t_w05iNNVvyNioWX47gMd_iqpE6qvPeyK0pdz_LvhT2tOkwneSNq8Z9eNfcArO4Ls904S43AlU4jK7KXhIhnrITnquwBg=w800"/></a>
 		    <a href="" class="thumbs"><img src="https://lh3.googleusercontent.com/U-qqtyN-GZ9jFFqiiokWBRsFbK5UWrOtve8u6sJm4jaYgNRYeZSBriNxK1JMBdYe5IrXJiKXj4soNgfbuxS4N_GvHmfDXnlHQg8rNcmvvBaHESkMB9_2xxuWIkAcQFa8AvT3wckMqg=w800"/></a>
         <a href="" class="thumbs"><img src="https://lh3.googleusercontent.com/HzN64C09XwCZNFT1A2XCYenBCS3gZeEfDIQpmT0miqYOqOJecTqTil-D5VUyuBVyrYk6rvUJiu4q2e-AEmw8AXWTCFh_HtFEWyvqmHy_PFTAt98ZWtfQgAj0vxM5GFUX0RZwAMoc3Q=w800"/></a>
