--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
                   The project tasked us with developing a game which we were given full creative freedom over.
                   Our final submission was a somewhat interesting take on a typical boss fight where the player is required to defeat the giant seagull
                   collect as many "eggs" as possible.</p>
-                <a class="source-button" href="">View Source</a>
+                <a class="source-button" href="https://github.com/aturnerr/A2-COMP30019" target="_blank">View Source</a>
               </div>
             </div>
           </div>
@@ -49,10 +49,11 @@
           <div class="project-block">
             <h3>Food Interest Group Webpage</h3>
             <div class="block-content">
-              <img height="225" src="assets/figwebsite.png"/>
+              <a href="https://www.unimelbfig.com" target="_blank"><img height="225" src="assets/figwebsite.png"/></a>
               <div class="block-text">
-                <p>placeholder</p>
-                <a class="source-button" href="">View Source</a>
+                <p>Food Interest Group is the biggest food related society at the University of Melbourne. I've been on the committee for nearly 2 years now,
+                and this year I designed and built a webpage as a hub for all of our information including our partners, committee and contact details.</p>
+                <a class="source-button" href="https://github.com/unimelbfig/web" target="_blank">View Source</a>
               </div>
             </div>
           </div>
@@ -62,8 +63,8 @@
             <div class="block-content">
               <img height="225" src="assets/rmbwebsite.png"/>
               <div class="block-text">
-                <p>placeholder</p>
-                <a class="source-button" href="">View Source</a>
+                <p>In July 2017 I joined the team at ReferMyBuddy and did work experience over my winter break. This was my first introduction to web design,
+                I built the countdown landing page for the company before it went live in late 2017.</p>
               </div>
             </div>
           </div>
