--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Adam Turner</title>
+  <title>Adam Turner | About</title>
   <link rel="stylesheet" type="text/css" href="style.css"/>
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,200i,400,500" rel="stylesheet">
   <link rel="canonical" href="https://adamturner.me/"/>
