--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
           <div class="intro">
             <p id='bio'>I’m a passionate programmer and designer in my free time, I enjoy working on and learning about fields in both development and design, such as cybersecurity, games, UI/UX and web design to name a few.<br><br>
               I love the challenges faced at University and the friends I make along the way. Creating and discussing solutions for projects has taught me so much over the past 2 years of my course and I’m excited to bring those skills out into the workforce.<br><br>
-              I’ve recently developed a love for travel and am also an amateur photographer, with a passion for capturing those special and memorable moments for myself and others.</p>
+              I enjoy taking photos in my free time, and have a passion for capturing those special and memorable moments for myself and others.</p>
             <img src="assets/dp.jpg"/>
           </div>
           <div class="line-break"></div>
