svg updates, home page contact

--- a/contact.html
+++ b/contact.html
@@ -34,11 +34,11 @@
           <h1>Contact me</h1>
           <p>I'm actively on the lookout for graduate opportunities and photography work. The easiest way to get in touch with me is via email, feel free to use any of the below.</p>
           <div class="social-icons">
-            <a href="mailto:aturnerr2@gmail.com"><img href="" src="assets/empty-email.svg"/>Email</a>
-            <a href="https://www.facebook.com/im.adamturner"><img href="" src="assets/facebookicon.svg"/>Facebook</a>
-            <a href="https://www.instagram.com/adam.turnerr/"><img href="" src="assets/instagramicon.svg"/>Instagram</a>
-            <a href="https://github.com/aturnerr"><img href="" src="assets/github.svg"/>Github</a>
-            <a href="https://www.linkedin.com/in/aturnerr/"><img href="" src="assets/linkedin.svg"/>LinkedIn</a>
+            <a href="mailto:aturnerr2@gmail.com"><img href="" src="assets/email_black.svg"/>Email</a>
+            <a href="https://www.facebook.com/im.adamturner"><img href="" src="assets/facebook_black.svg"/>Facebook</a>
+            <a href="https://www.instagram.com/adam.turnerr/"><img href="" src="assets/instagram_black.svg"/>Instagram</a>
+            <a href="https://github.com/aturnerr"><img href="" src="assets/github_black.svg"/>Github</a>
+            <a href="https://www.linkedin.com/in/aturnerr/"><img href="" src="assets/linkedin_black.svg"/>LinkedIn</a>
           </div>
         </div>
       </div>
