--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
     <div class="home-content">
       <h1>ADAM TURNER</h1>
       <h2>Currently studying Computing and Digital Technologies<br>in the Bachelor of Design at The University of Melbourne.</h2>
+      <div class="home-social-icons">
+        <a href="mailto:aturnerr2@gmail.com"><img href="" src="assets/email_white.svg"/></a>
+        <a href="https://www.facebook.com/im.adamturner"><img href="" src="assets/facebook_white.svg"/></a>
+        <a href="https://www.instagram.com/adam.turnerr/"><img href="" src="assets/instagram_white.svg"/></a>
+        <a href="https://github.com/aturnerr"><img href="" src="assets/github_white.svg"/></a>
+        <a href="https://www.linkedin.com/in/aturnerr/"><img href="" src="assets/linkedin_white.svg"/></a>
+      </div>
     </div>
   </div>
 </body>
