--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <link rel="canonical" href="https://adamturner.me/"/>
   <script src="assets/jquery-3.3.1.min.js"></script>
   <script src="main.js"></script>
+  <script src='assets/particles.js'></script>
 </head>
 
 <body>
   <div class="main">
+    <div id="particles-js"></div>
     <div class="menu-button">
       <div class="line"></div>
       <div class="line"></div>
