--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <script src="assets/jquery-3.3.1.min.js"></script>
   <script src="main.js"></script>
   <script src='assets/particles.js'></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135516946-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-135516946-1');
+  </script>
 </head>
 
 <body>
