--- a/photography.html
+++ b/photography.html
@@ -9,6 +9,15 @@
   <link rel="canonical" href="https://adamturner.me/"/>
   <script src="assets/jquery-3.3.1.min.js"></script>
   <script src="main.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135516946-1"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-135516946-1');
+  </script>
 </head>
 
 <body>
