text fixes, photography logo

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       <div class="content-area">
         <div class="text">
           <h1>Contact me</h1>
-          <p>I'm actively on the lookout for graduate opportunities and photography work. The easiest way to get in touch with me is via email, feel free to use any of the below.</p>
+          <p>I'm actively on the lookout for graduate opportunities and photography work. If you'd like to get in touch to say hi, or if you just want some Korean restuarant recommendations, the easiest way is via email, but any of the below work too.</p>
           <div class="social-icons">
             <a href="mailto:aturnerr2@gmail.com"><img href="" src="assets/email_black.svg"/>Email</a>
             <a href="https://www.facebook.com/im.adamturner"><img href="" src="assets/facebook_black.svg"/>Facebook</a>
