--- a/photography.html
+++ b/photography.html
@@ -39,7 +39,7 @@
     </div>
     <div class="pg-content">
       <div class="pg-header">
-        <h1>Photography</h1>
+        <img src="assets/photography_logo.png"/>
         <p>I take photos of events and my travels.</p>
         <p>If you are interested in working with me, reach <a href="contact.html">out here</a> and let's get started.</p>
       </div>
