--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
                 <p>The Adventures of Squidwod is a 3D game developed in Unity by myself and two other group members for the subject COMP30023.
                   The project tasked us with developing a game which we were given full creative freedom over.
                   Our final submission was a somewhat interesting take on a typical boss fight where the player is required to defeat the giant seagull
-                  collect as many "eggs" as possible.</p>
+                  while collecting as many "eggs" as possible. I made a trailer too, give it a watch!</p>
                 <a class="source-button" href="https://github.com/aturnerr/A2-COMP30019" target="_blank">View Source</a>
               </div>
             </div>
