--- a/about.html
+++ b/about.html
@@ -42,9 +42,9 @@
         <div class="text">
           <h1>About me</h1>
           <div class="intro">
-            <p id='bio'>I’m a passionate programmer and designer in my free time, I enjoy working on and learning about fields in both development and design, such as cybersecurity, games, UI/UX and web design to name a few.<br><br>
+            <p id='bio'>I’m a passionate programmer and designer in my free time, I enjoy working on and learning about fields in both development and design, such as cyber security, games, UI/UX and web design to name a few.<br><br>
               I love the challenges faced at University and the friends I make along the way. Creating and discussing solutions for projects has taught me so much over the past 2 years of my course and I’m excited to bring those skills out into the workforce.<br><br>
-              I enjoy taking photos in my free time, and have a passion for capturing those special and memorable moments for myself and others.</p>
+              You will often find me chipping away at CTF challenges, watching Korean drama and taking photos in my free time. I have a passion for capturing those special and memorable moments for myself and others, and I spend more time than I'd like to admit on some CTFs, really though, time just goes so much faster!</p>
             <img src="assets/dp.jpg"/>
           </div>
           <div class="line-break"></div>
