remove experience page, about text update

--- a/about.html
+++ b/about.html
@@ -32,7 +32,6 @@
     <div class="nav" id="nav">
       <a id="name" href="index.html">ADAM TURNER</a>
       <a href="about.html">ABOUT</a>
-      <a href="experience.html">EXPERIENCE</a>
       <a href="projects.html">PROJECTS</a>
       <a href="photography.html">PHOTOGRAPHY</a>
       <a href="contact.html">CONTACT</a>
@@ -42,16 +41,16 @@
         <div class="text">
           <h1>About me</h1>
           <div class="intro">
-            <p id='bio'>I’m a passionate programmer and designer in and out of my studies, I enjoy working on and learning about fields in both development and design, such as cyber security, games, UI/UX and web design.<br><br>
-              I love the challenges faced at University and the friends I make along the way. Being in an environment where I can collaborate and create solutions for projects has provided invaluable experience over the past 2 years of my course.<br><br>
-              You will often find me chipping away at CTF challenges, watching Korean dramas and taking photos in my free time. I love capturing those special and memorable moments for myself and others.</p>
+            <p id='bio'>I’m a passionate programmer and designer in and out of my studies. My main interests involve researching and learning about cyber security, where I spend much of my time developing my technical and analytical skills within the field.<br><br>
+I am in the final semester of my degree at the University of Melbourne, where my studies have exposed me to various different areas of computer science, development and design. I have most enjoyed working on and learning about networking, artifical intelligence, UI/UX, as well as game and web development.<br><br>
+In my spare time, I'll often be found chipping away at CTF challenges, working on HackTheBox machines, watching Korean dramas, taking photos and working with fellow students within the student clubs I'm involved in.</p>
             <img src="assets/dp.jpg"/>
           </div>
           <div class="line-break"></div>
           <h2>Education<h2>
           <h3>University of Melbourne</h3>
           <h4>2017 - Present</h4>
-          <p>I am currently in the third year of my undergraduate degree at Melbourne, and am part of the first cohort of students taking the new Bachelor of Design. I chose this degree as it contained pathway options for both of my interests in design and computing, which allowed me to mix my choice of electives and core subjects from both faculties. I’ll be completing the degree with a major in Computing and a minor in Digital Technologies.</p>
+          <p>I am currently in the third year of my undergraduate degree at Melbourne, and am part of the first cohort of students taking the new Bachelor of Design. The degree was an appealing choice as it contained pathway options for both of my interests in design and computing, which allowed me to mix my choice of electives and core subjects from both faculties. I’ll be completing the degree with a major in Computing and a minor in Digital Technologies.</p>
           <h3>Suzanne Cory High School</h3>
           <h4>2013 - 2016</h4>
           <p>In 2012 I was offered a place at Suzanne Cory, one of the four selective entry high schools in Victoria. Throughout my time there I was able to further develop my passion for computing and design in my electives and VCE which helped me to graduate with an ATAR capable of securing me a position in the Bachelor of Design.</p>
