--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
       <div class="line"></div>
       <div class="line"></div>
     </div>
-    <div class="nav" id="nav">
+    <div class="nav index" id="nav">
       <a id="name" href="index.html">ADAM TURNER</a>
       <a href="about.html">ABOUT</a>
-      <a href="experience.html">EXPERIENCE</a>
       <a href="projects.html">PROJECTS</a>
       <a href="photography.html">PHOTOGRAPHY</a>
       <a href="contact.html">CONTACT</a>
@@ -39,11 +38,10 @@
       <h1>ADAM TURNER</h1>
       <h2>Currently studying Computing and Digital Technologies<br>in the Bachelor of Design at The University of Melbourne.</h2>
       <div class="home-social-icons">
-        <a href="mailto:aturnerr2@gmail.com"><img href="" src="assets/email_white.svg"/></a>
-        <a href="https://www.facebook.com/im.adamturner"><img href="" src="assets/facebook_white.svg"/></a>
-        <a href="https://www.instagram.com/adam.turnerr/"><img href="" src="assets/instagram_white.svg"/></a>
-        <a href="https://github.com/aturnerr"><img href="" src="assets/github_white.svg"/></a>
-        <a href="https://www.linkedin.com/in/aturnerr/"><img href="" src="assets/linkedin_white.svg"/></a>
+        <a href="mailto:aturnerr2@gmail.com" target="_blank"><img href="" src="assets/email_white.svg"/></a>
+        <a href="https://github.com/aturnerr" target="_blank"><img href="" src="assets/github_white.svg"/></a>
+        <a href="https://www.linkedin.com/in/aturnerr/" target="_blank"><img href="" src="assets/linkedin_white.svg"/></a>
+        <a href="https://www.instagram.com/adam.turnerr/" target="_blank"><img href="" src="assets/instagram_white.svg"/></a>
       </div>
     </div>
   </div>
