remove contact page, project updates

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
       <a href="about.html">ABOUT</a>
       <a href="projects.html">PROJECTS</a>
       <a href="photography.html">PHOTOGRAPHY</a>
-      <a href="contact.html">CONTACT</a>
     </div>
     <div class="home-content">
       <h1>ADAM TURNER</h1>
       <h2>Currently studying Computing and Digital Technologies<br>in the Bachelor of Design at The University of Melbourne.</h2>
       <div class="home-social-icons">
         <a href="mailto:aturnerr2@gmail.com" target="_blank"><img href="" src="assets/email_white.svg"/></a>
-        <a href="https://github.com/aturnerr" target="_blank"><img href="" src="assets/github_white.svg"/></a>
+        <a href="https://www.github.com/aturnerr" target="_blank"><img href="" src="assets/github_white.svg"/></a>
         <a href="https://www.linkedin.com/in/aturnerr/" target="_blank"><img href="" src="assets/linkedin_white.svg"/></a>
         <a href="https://www.instagram.com/adam.turnerr/" target="_blank"><img href="" src="assets/instagram_white.svg"/></a>
+        <a href="https://www.youtube.com/adamturner/" target="_blank"><img href="" src="assets/youtube_white.png"/></a>
       </div>
     </div>
   </div>
