--- a/projects.html
+++ b/projects.html
@@ -34,12 +34,24 @@
       <a href="about.html">ABOUT</a>
       <a href="projects.html">PROJECTS</a>
       <a href="photography.html">PHOTOGRAPHY</a>
-      <a href="contact.html">CONTACT</a>
     </div>
     <div class="content">
       <div class="content-area">
         <div class="text">
           <h1>Projects</h1>
+          <div class="project-block">
+            <h3>ReviewMyResume</h3>
+            <div class="block-content">
+              <a href="http://reviewmyresume.herokuapp.com/" target="_blank"><img height="225" src="assets/rmrwebsite.png"/></a>
+              <div class="block-text">
+                <p>Major project for INFO30005 Web Information Technologies. ReviewMyResume is a platform built with Node.js & Express allowing users to upload resumes and receive feedback
+                from other users.<br>
+                Utilises a MongoDB database and GCS bucket for storing data and files.</p>
+                <a class="source-button" href="https://github.com/aturnerr/ReviewMyResume" target="_blank">View Source</a>
+              </div>
+            </div>
+          </div>
+          <div class="line-break"></div>
           <div class="project-block">
             <h3>The Adventures of Squidwod</h3>
             <div class="block-content">
