--- a/about.html
+++ b/about.html
@@ -34,7 +34,6 @@
       <a href="about.html">ABOUT</a>
       <a href="projects.html">PROJECTS</a>
       <a href="photography.html">PHOTOGRAPHY</a>
-      <a href="contact.html">CONTACT</a>
     </div>
     <div class="content">
       <div class="content-area">
@@ -50,7 +49,7 @@ In my spare time, I'll often be found chipping away at CTF challenges, working o
           <h2>Education<h2>
           <h3>University of Melbourne</h3>
           <h4>2017 - Present</h4>
-          <p>I am currently in the third year of my undergraduate degree at Melbourne, and am part of the first cohort of students taking the new Bachelor of Design. The degree was an appealing choice as it contained pathway options for both of my interests in design and computing, which allowed me to mix my choice of electives and core subjects from both faculties. I’ll be completing the degree with a major in Computing and a minor in Digital Technologies.</p>
+          <p>I am currently in the third year of my undergraduate degree at Melbourne, within the first cohort of students taking the new Bachelor of Design. The degree was an appealing choice as it contained pathway options for both of my interests in design and computing, which allowed me to mix my choice of electives and core subjects from both faculties. I’ll be completing the degree with a major in Computing and a minor in Digital Technologies.</p>
           <h3>Suzanne Cory High School</h3>
           <h4>2013 - 2016</h4>
           <p>In 2012 I was offered a place at Suzanne Cory, one of the four selective entry high schools in Victoria. Throughout my time there I was able to further develop my passion for computing and design in my electives and VCE which helped me to graduate with an ATAR capable of securing me a position in the Bachelor of Design.</p>
