pg contact link updates

--- a/photography.html
+++ b/photography.html
@@ -37,9 +37,10 @@
     </div>
     <div class="pg-content">
       <div class="pg-header">
-        <img src="assets/photography_logo.png"/>
+        <!-- <img src="assets/photography_logo.png"/> -->
+        <h1>Photography</h1>
         <p>I take photos of events and my travels.</p>
-        <p>If you are interested in working with me, reach <a href="contact.html">out here</a> and let's get started.</p>
+        <p>If you are interested in working with me, reach out via <a href="mailto:aturnerr2@gmail.com">email</a> or <a href="https://www.instagram.com/adam.turnerr/">instagram</a> and let's get started.</p>
       </div>
       <div class="pg-gallery">
         <a href="" class="thumbs"><img src="https://lh3.googleusercontent.com/usukHgi_Q04cdmQY-vu30ca3FwXYXRRE9_cs5I_0PQ36n2mmVk-E3vT2CWy88QMD3cP4V7rRagN81qaFzbDXWuMP4eqsP6oGcBqE0WkZvPCLhsvsz6odx8mCzja75sZeRqiMQckaxw=w800"/></a>
