--- a/about.html
+++ b/about.html
@@ -40,9 +40,10 @@
         <div class="text">
           <h1>About me</h1>
           <div class="intro">
-            <p id='bio'>I’m a passionate programmer and designer in and out of my studies. My main interests involve researching and learning about cyber security, where I spend much of my time developing my technical and analytical skills within the field.<br><br>
-I am in the final semester of my degree at the University of Melbourne, where my studies have exposed me to various different areas of computer science, development and design. I have most enjoyed working on and learning about networking, artifical intelligence, UI/UX, as well as game and web development.<br><br>
-In my spare time, I'll often be found chipping away at CTF challenges, working on HackTheBox machines, watching Korean dramas, taking photos and working with fellow students within the student clubs I'm involved in.</p>
+            <p id='bio'>I've come to really enjoy learning, programming, designing throughout my studies. My main interests within IT would have to be researching and learning about cyber security, where I spend much of my time developing my technical and analytical skills.<br><br>
+              At the end of 2019, I completed my degree in Computing & Digital Technology at the University of Melbourne, where my studies exposed me to various different areas of computer science, development and design. Throughout my time at university, I most enjoyed working on and learning about networking, artifical intelligence, UI/UX, as well as game and web development.<br><br>
+              I secured a place in the 2020 Graduate Program at WorkSafe Victoria, where I've since joined their Digital Security team and am learning more about the field from the perspective of a large organisation.<br><br>
+              That sums up all the main stuff, the rest of my spare time is spent working on random projects, taking photos, learning guitar and planning my next travel adventure!</p>
             <img src="assets/dp.jpg"/>
           </div>
           <div class="line-break"></div>
