--- a/about.html
+++ b/about.html
@@ -23,17 +23,16 @@
 <body>
   <div class="main">
     <div class="mobile-header">
-
     </div>
     <div class="menu-button">
       <div class="line"></div>
       <div class="line"></div>
     </div>
     <div class="nav" id="nav">
-      <a id="name" href="index.html">ADAM TURNER</a>
-      <a href="about.html">ABOUT</a>
-      <a href="projects.html">PROJECTS</a>
-      <a href="photography.html">PHOTOGRAPHY</a>
+        <a id="name" href="index">ADAM TURNER</a>
+        <a href="about">ABOUT</a>
+        <a href="projects">PROJECTS</a>
+        <a href="photos">PHOTOS</a>
     </div>
     <div class="content">
       <div class="content-area">
@@ -42,15 +41,15 @@
           <div class="intro">
             <p id='bio'>I've come to really enjoy learning, programming, designing throughout my studies. My main interests within IT would have to be researching and learning about cyber security, where I spend much of my time developing my technical and analytical skills.<br><br>
               At the end of 2019, I completed my degree in Computing & Digital Technology at the University of Melbourne, where my studies exposed me to various different areas of computer science, development and design. Throughout my time at university, I most enjoyed working on and learning about networking, artifical intelligence, UI/UX, as well as game and web development.<br><br>
-              I secured a place in the 2020 Graduate Program at WorkSafe Victoria, where I've since joined their Digital Security team and am learning more about the field from the perspective of a large organisation.<br><br>
+              I secured a place in the 2020 Graduate Program at WorkSafe Victoria, where I've joined their Digital Security team and am learning more about the field from the perspective of a large organisation.<br><br>
               That sums up all the main stuff, the rest of my spare time is spent working on random projects, taking photos, learning guitar and planning my next travel adventure!</p>
             <img src="assets/dp.jpg"/>
           </div>
           <div class="line-break"></div>
           <h2>Education<h2>
           <h3>University of Melbourne</h3>
-          <h4>2017 - Present</h4>
-          <p>I am currently in the third year of my undergraduate degree at Melbourne, within the first cohort of students taking the new Bachelor of Design. The degree was an appealing choice as it contained pathway options for both of my interests in design and computing, which allowed me to mix my choice of electives and core subjects from both faculties. I’ll be completing the degree with a major in Computing and a minor in Digital Technologies.</p>
+          <h4>2017 - 2019</h4>
+          <p>At the end of 2019 I completed my undergraduate degree at Melbourne as part of the first cohort of students in the Bachelor of Design. I found this degree appealing as it contained pathway options for both of my interests in design and computing, allowing me to mix my choice of electives and core subjects from both faculties.  I graduated with a major in Computing and a Digital Technologies minor.</p>
           <h3>Suzanne Cory High School</h3>
           <h4>2013 - 2016</h4>
           <p>In 2012 I was offered a place at Suzanne Cory, one of the four selective entry high schools in Victoria. Throughout my time there I was able to further develop my passion for computing and design in my electives and VCE which helped me to graduate with an ATAR capable of securing me a position in the Bachelor of Design.</p>
