--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,10 @@
       <div class="line"></div>
     </div>
     <div class="nav" id="nav">
-      <a id="name" href="index.html">ADAM TURNER</a>
-      <a href="about.html">ABOUT</a>
-      <a href="projects.html">PROJECTS</a>
-      <a href="photography.html">PHOTOGRAPHY</a>
-      <a href="contact.html">CONTACT</a>
+        <a id="name" href="index">ADAM TURNER</a>
+        <a href="about">ABOUT</a>
+        <a href="projects">PROJECTS</a>
+        <a href="photos">PHOTOS</a>
     </div>
     <div class="content">
       <div class="content-area">
