--- a/index.html
+++ b/index.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Adam Turner</title>
-  <link rel="stylesheet" type="text/css" href="style.css"/>
-  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,500" rel="stylesheet">
-  <link rel="canonical" href="https://adamturner.me/"/>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135516946-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Adam Turner</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,500" rel="stylesheet">
+    <link rel="canonical" href="https://adamturner.me/"/>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135516946-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-    gtag('config', 'UA-135516946-1');
-  </script>
-  <script src="assets/jquery-3.3.1.min.js"></script>
-  <script src="main.js"></script>
-  <script src='assets/particles.js'></script>
+        gtag('config', 'UA-135516946-1');
+    </script>
+    <script src="assets/jquery-3.3.1.min.js"></script>
+    <script src="main.js"></script>
+    <script src='assets/particles.js'></script>
 </head>
 
 <body>
-  <div class="main">
-    <div id="particles-js"></div>
-    <div class="menu-button">
-      <div class="line"></div>
-      <div class="line"></div>
+    <div class="main">
+        <div id="particles-js"></div>
+        <div class="menu-button">
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+        <div class="nav index" id="nav">
+            <a id="name" href="index">ADAM TURNER</a>
+            <a href="about">ABOUT</a>
+            <a href="projects">PROJECTS</a>
+            <a href="photos">PHOTOS</a>
+        </div>
+        <div class="home-content">
+            <h1>ADAM TURNER</h1>
+            <h2>Computing and Digital Technologies Graduate<br>working in Digital Security at WorkSafe Victoria</h2>
+            <div class="home-social-icons">
+                <a href="mailto:aturnerr2@gmail.com" target="_blank"><img href="" src="assets/email_white.svg"/></a>
+                <a href="https://www.github.com/aturnerr" target="_blank"><img href="" src="assets/github_white.svg"/></a>
+                <a href="https://www.linkedin.com/in/aturnerr/" target="_blank"><img href="" src="assets/linkedin_white.svg"/></a>
+                <a href="https://www.instagram.com/adam.turnerr/" target="_blank"><img href="" src="assets/instagram_white.svg"/></a>
+                <a href="https://www.youtube.com/adamturner/" target="_blank"><img href="" src="assets/youtube_white.png"/></a>
+            </div>
+        </div>
     </div>
-    <div class="nav index" id="nav">
-      <a id="name" href="index.html">ADAM TURNER</a>
-      <a href="about.html">ABOUT</a>
-      <a href="projects.html">PROJECTS</a>
-      <a href="photography.html">PHOTOGRAPHY</a>
-    </div>
-    <div class="home-content">
-      <h1>ADAM TURNER</h1>
-      <h2>Currently studying Computing and Digital Technologies<br>in the Bachelor of Design at The University of Melbourne.</h2>
-      <div class="home-social-icons">
-        <a href="mailto:aturnerr2@gmail.com" target="_blank"><img href="" src="assets/email_white.svg"/></a>
-        <a href="https://www.github.com/aturnerr" target="_blank"><img href="" src="assets/github_white.svg"/></a>
-        <a href="https://www.linkedin.com/in/aturnerr/" target="_blank"><img href="" src="assets/linkedin_white.svg"/></a>
-        <a href="https://www.instagram.com/adam.turnerr/" target="_blank"><img href="" src="assets/instagram_white.svg"/></a>
-        <a href="https://www.youtube.com/adamturner/" target="_blank"><img href="" src="assets/youtube_white.png"/></a>
-      </div>
-    </div>
-  </div>
 </body>
