--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Adam Turner</title>
+    <meta name="description" content="Hey I'm Adam, Unimelb Computing and Digital Technologies Graduate currently working in Digital Security at WorkSafe Victoria"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,500" rel="stylesheet">
     <link rel="canonical" href="https://adamturner.me/"/>
