about, photo page updates

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Adam Turner | About</title>
+  <title>About | Adam Turner</title>
   <meta name="description" content="Hey I'm Adam, Unimelb Computing and Digital Technologies Graduate currently working in Digital Security at WorkSafe Victoria"/>
   <link rel="stylesheet" type="text/css" href="style.css"/>
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,200i,400,500" rel="stylesheet">
@@ -38,22 +38,31 @@
     <div class="content">
       <div class="content-area">
         <div class="text">
-          <h1>About me</h1>
           <div class="intro">
-            <p id='bio'>I've come to really enjoy learning, programming, designing throughout my studies. My main interests within IT would have to be researching and learning about cyber security, where I spend much of my time developing my technical and analytical skills.<br><br>
-              At the end of 2019, I completed my degree in Computing & Digital Technology at the University of Melbourne, where my studies exposed me to various different areas of computer science, development and design. Throughout my time at university, I most enjoyed working on and learning about networking, artifical intelligence, UI/UX, as well as game and web development.<br><br>
-              I secured a place in the 2020 Graduate Program at WorkSafe Victoria, where I've joined their Digital Security team and am learning more about the field from the perspective of a large organisation.<br><br>
-              That sums up all the main stuff, the rest of my spare time is spent working on random projects, taking photos, learning guitar and planning my next travel adventure!</p>
             <img src="assets/dp.jpg"/>
+
+              <h1>Hi! I'm Adam. <span class="wave"> 👋</span></h1>
+            
+            <div class="line-break-small"></div>
           </div>
-          <div class="line-break"></div>
-          <h2>Education<h2>
-          <h3>University of Melbourne</h3>
-          <h4>2017 - 2019</h4>
-          <p>At the end of 2019 I completed my undergraduate degree at Melbourne as part of the first cohort of students in the Bachelor of Design. I found this degree appealing as it contained pathway options for both of my interests in design and computing, allowing me to mix my choice of electives and core subjects from both faculties.  I graduated with a major in Computing and a Digital Technologies minor.</p>
-          <h3>Suzanne Cory High School</h3>
-          <h4>2013 - 2016</h4>
-          <p>In 2012 I was offered a place at Suzanne Cory, one of the four selective entry high schools in Victoria. Throughout my time there I was able to further develop my passion for computing and design in my electives and VCE which helped me to graduate with an ATAR capable of securing me a position in the Bachelor of Design.</p>
+            <p id='bio-text'>I'm a recent graduate working as a Digital Security Analyst at WorkSafe Victoria 
+              through their 2020 Graduate Program. I aim to continue to grow my career within the Digital Security field 
+              utilising my knowledge, skills and drive to learn.<br><br>
+              At the end of 2019, I completed my degree in Computing & Digital Technology at the University of Melbourne, 
+              where my studies exposed me to various different areas of computer science, development and design. 
+              I found learning about networking, artifical intelligence, UI/UX, game and web development to be the most interesting.<br><br>
+              Outside of work, you'll likely find me spending time engrossed in a game, playing guitar, 
+              working on <a href="https://www.github.com/aturnerr" target="_blank">random projects</a>, taking <a href="photos">photos</a>, or making <a href="https://www.youtube.com/adamturner/" target="_blank">videos</a>.
+            <div class="line-break"></div>
+          <div class="education">
+            <h2>Education<h2>
+            <h3>University of Melbourne</h3>
+            <h4>2017 - 2019</h4>
+            <p>At the end of 2019 I completed my undergraduate degree at Melbourne as part of the first cohort of students in the Bachelor of Design. I found this degree appealing as it contained pathway options for both of my interests in design and computing, allowing me to mix my choice of electives and core subjects from both faculties.  I graduated with a major in Computing and a Digital Technologies minor.</p>
+            <h3>Suzanne Cory High School</h3>
+            <h4>2013 - 2016</h4>
+            <p>In 2012 I was offered a place at Suzanne Cory, one of the four selective entry high schools in Victoria. Throughout my time there I was able to further develop my passion for computing and design in my electives and VCE which helped me to graduate with an ATAR capable of securing me a position in the Bachelor of Design.</p>
+          </div>
         </div>
       </div>
     </div>
