font size changes

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
             <div class="line-break-small"></div>
           </div>
             <p id='bio-text'>I'm a recent graduate working as a Digital Security Analyst at WorkSafe Victoria 
-              through their 2020 Graduate Program. I aim to continue to grow my career within the Digital Security field 
+              through their 2020 Graduate Program. I'm aiming to continue growing my career within the Digital Security field 
               utilising my knowledge, skills and drive to learn.<br><br>
               At the end of 2019, I completed my degree in Computing & Digital Technology at the University of Melbourne, 
               where my studies exposed me to various different areas of computer science, development and design. 
