about, projects text update. minor formatting changes.

--- a/about.html
+++ b/about.html
@@ -52,23 +52,21 @@
             
             <div class="line-break-small"></div>
           </div>
-            <p id='bio-text'>I'm a recent graduate working as a Digital Security Analyst at WorkSafe Victoria 
-              through their 2020 Graduate Program. I'm aiming to continue growing my career within the Digital Security field 
-              utilising my knowledge, skills and drive to learn.<br><br>
-              At the end of 2019, I completed my degree in Computing & Digital Technology at the University of Melbourne, 
-              where my studies exposed me to various different areas of computer science, development and design. 
-              I found learning about networking, artifical intelligence, UI/UX, game and web development to be the most interesting.<br><br>
-              Outside of work, you'll likely find me spending time engrossed in a game, playing guitar, 
+            <p id='bio-text'>I'm a motivated digital security anaylst who has experience in incident response, security tooling, 
+              documentation, process and reporting. I'm passionate about encouraging a security-first mindset and working to keep 
+              both people and organisations secure.<br><br>
+              Outside of work, I enjoy playing the piano and guitar,  
               working on <a href="https://www.github.com/aturnerr" target="_blank">random projects</a>, taking <a href="photos">photos</a>, or making <a href="https://www.youtube.com/adamturner/" target="_blank">videos</a>.
             <div class="line-break"></div>
           <div class="education">
             <h2>Education<h2>
             <h3>University of Melbourne</h3>
             <h4>2017 - 2019</h4>
-            <p>At the end of 2019 I completed my undergraduate degree at Melbourne as part of the first cohort of students in the Bachelor of Design. I found this degree appealing as it contained pathway options for both of my interests in design and computing, allowing me to mix my choice of electives and core subjects from both faculties.  I graduated with a major in Computing and a Digital Technologies minor.</p>
+            <p>I completed my degree in Computing & Digital Technology in the Bachelor of Design. My studies exposed me to various 
+              different areas of computer science, development, architecture and design. My most interesting subjects were based 
+              around networking, artifical intelligence, UI/UX, game and web development.</p>
             <h3>Suzanne Cory High School</h3>
             <h4>2013 - 2016</h4>
-            <p>In 2012 I was offered a place at Suzanne Cory, one of the four selective entry high schools in Victoria. Throughout my time there I was able to further develop my passion for computing and design in my electives and VCE which helped me to graduate with an ATAR capable of securing me a position in the Bachelor of Design.</p>
           </div>
         </div>
       </div>
