--- a/projects.html
+++ b/projects.html
@@ -47,14 +47,27 @@
         <div class="text">
           <h1>Projects</h1>
           <div class="project-block">
+            <h3>FalconArduino</h3>
+            <div class="block-content">
+              <iframe width="300" height="168" src="https://www.youtube.com/embed/MH04Gj5Ibis" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div class="block-text">
+                <p>What could be cooler than a giant lego spaceship? One that lights up and takes off of course. 
+                  For this idea I took an Arduino, LED strip and speaker ripped out from an old toy and shoved 
+                  them in the empty housing inside a Lego Millenium Falcon. Take a look at the result!</p>
+                <a class="source-button" href="https://github.com/aturnerr/FalconArduino" target="_blank">More Info</a>
+              </div>
+            </div>
+          </div>
+          <div class="line-break"></div>
+          <div class="project-block">
             <h3>ReviewMyResume</h3>
             <div class="block-content">
-              <a href="http://reviewmyresume.herokuapp.com/" target="_blank"><img height="225" src="assets/rmrwebsite.png"/></a>
+              <div><img src="assets/rmrwebsite.png"/></div>
               <div class="block-text">
                 <p>Major project for INFO30005 Web Information Technologies. ReviewMyResume is a platform built with Node.js & Express allowing users to upload resumes and receive feedback
                 from other users.<br>
                 Utilises a MongoDB database and GCS bucket for storing data and files.</p>
-                <a class="source-button" href="https://github.com/aturnerr/ReviewMyResume" target="_blank">View Source</a>
+                <a class="source-button" href="https://github.com/aturnerr/ReviewMyResume" target="_blank">More Info</a>
               </div>
             </div>
           </div>
@@ -62,13 +75,13 @@
           <div class="project-block">
             <h3>The Adventures of Squidwod</h3>
             <div class="block-content">
-              <iframe width="400" height="225" src="https://www.youtube.com/embed/cl5terITNiY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="300" height="168" src="https://www.youtube.com/embed/cl5terITNiY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <div class="block-text">
                 <p>The Adventures of Squidwod is a 3D game developed in Unity by myself and two other group members for the subject COMP30023.
                   The project tasked us with developing a game which we were given full creative freedom over.
                   Our final submission was a somewhat interesting take on a typical boss fight where the player is required to defeat the giant seagull
                   while collecting as many "eggs" as possible. I made a trailer too, give it a watch!</p>
-                <a class="source-button" href="https://github.com/aturnerr/A2-COMP30019" target="_blank">View Source</a>
+                <a class="source-button" href="https://github.com/aturnerr/A2-COMP30019" target="_blank">More Info</a>
               </div>
             </div>
           </div>
@@ -76,22 +89,11 @@
           <div class="project-block">
             <h3>Food Interest Group Webpage</h3>
             <div class="block-content">
-              <a href="https://www.unimelbfig.com" target="_blank"><img height="225" src="assets/figwebsite.png"/></a>
+              <div><img height="225" src="assets/figwebsite.png"/></div>
               <div class="block-text">
                 <p>Food Interest Group is the biggest food related society at the University of Melbourne. I've been on the committee for nearly 2 years now,
                 and this year I designed and built a webpage as a hub for all of our information including our partners, committee and contact details.</p>
-                <a class="source-button" href="https://github.com/unimelbfig/web" target="_blank">View Source</a>
-              </div>
-            </div>
-          </div>
-          <div class="line-break"></div>
-          <div class="project-block">
-            <h3>ReferMyBuddy Landing Page</h3>
-            <div class="block-content">
-              <img height="225" src="assets/rmbwebsite.png"/>
-              <div class="block-text">
-                <p>In July 2017 I joined the team at ReferMyBuddy and did work experience over my winter break. This was my first introduction to web design,
-                I built the countdown landing page for the company before it went live in late 2017.</p>
+                <a class="source-button" href="https://github.com/unimelbfig/web" target="_blank">More Info</a>
               </div>
             </div>
           </div>
