--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
         </div>
         <div class="home-content">
             <h1>ADAM TURNER</h1>
-            <h2>Computing and Digital Technologies Graduate<br>working in Digital Security at WorkSafe Victoria</h2>
+            <h2>Digital Security Analyst<br>Computing and Digital Technologies Graduate</h2>
             <div class="home-social-icons">
                 <a href="mailto:aturnerr2@gmail.com" target="_blank"><img href="" src="assets/email_white.svg"/></a>
                 <a href="https://www.github.com/aturnerr" target="_blank"><img href="" src="assets/github_white.svg"/></a>
                 <a href="https://www.linkedin.com/in/aturnerr/" target="_blank"><img href="" src="assets/linkedin_white.svg"/></a>
-                <a href="https://www.instagram.com/adam.turnerr/" target="_blank"><img href="" src="assets/instagram_white.svg"/></a>
                 <a href="https://www.youtube.com/adamturner/" target="_blank"><img href="" src="assets/youtube_white.png"/></a>
             </div>
         </div>
